--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/main_padding"
-        tools:context=".MainActivity">
+        tools:context=".ui.login.LoginActivity">
 
         <TextView
             android:id="@+id/tvTitleLoginPage"
